// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instrument Display components InfoItem matches snapshot 1`] = `
<div>
  <li
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
      >
        test title
      </span>
      <h6
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
      >
        title
      </h6>
    </div>
  </li>
</div>
`;

exports[`Instrument Display components InstrumentDisplay matches snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="makeStyles-heading-106"
      data-testid="loading-header"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit"
      >
        Violin 1-808
      </h5>
    </div>
  </div>
  <ul
    class="MuiList-root"
  >
    <ul
      class="MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Assigned To
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            Some Name
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Condition
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            ★★★★★
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Condition Notes
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            testconditionnotes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Gifted To Student
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            Yes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Instrument Location
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            Office
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Maintenance Notes
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            testmaintenancenotes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Quality
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            ★★★
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
          >
            Instrument Size
          </span>
          <h6
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            4/4
          </h6>
        </div>
      </li>
    </ul>
  </ul>
</div>
`;

exports[`Instrument Display components InstrumentDisplayFields matches snapshot 1`] = `
<div>
  <ul
    class="MuiList-root"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Assigned To
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          Some Name
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Condition
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          ★★★★★
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Condition Notes
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          testconditionnotes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Gifted To Student
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          Yes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Instrument Location
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          Office
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Maintenance Notes
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          testmaintenancenotes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Instrument Number
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          1-808
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Quality
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          ★★★
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Instrument Size
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          4/4
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          Instrument Type
        </span>
        <h6
          class="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          Violin
        </h6>
      </div>
    </li>
  </ul>
</div>
`;
